tests/ir/snapshots/integration__ir__mir__snapshot_mir_basic.snap
---
source: tests/ir/mir.rs
assertion_line: 15
expression: mir
---
MirProgram {
    functions: [
        MirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            body: [
                Let {
                    name: "x",
                    typ: Unit,
                    expr: Literal(
                        Int(
                            42,
                        ),
                    ),
                },
                Return(
                    Literal(
                        Unit,
                    ),
                ),
            ],
            span: 0..52,
        },
    ],
    externals: [],
}
